# name-tree-in-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  name_tree.c  name_tree.h  reader.c  reader.h  tree.c  tree.h  utils.c  utils.h
.github/workflows/: ccpp.yml
resources/: names.txt  names2.txt
